Separate Bloom class and some DoF updates

--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -179,6 +179,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\BloomPass.cpp" />
     <ClCompile Include="src\DepthOfFieldPass.cpp" />
     <ClCompile Include="src\Bokeh.cpp" />
     <ClCompile Include="src\Gaussian.cpp" />
@@ -286,6 +287,7 @@
     <ClCompile Include="src\DX11Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\BloomPass.h" />
     <ClInclude Include="src\DepthOfFieldPass.h" />
     <ClInclude Include="src\Bokeh.h" />
     <ClInclude Include="src\Gaussian.h" />
