--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
@@ -393,6 +393,9 @@
     <ClCompile Include="src\DepthOfFieldPass.cpp">
       <Filter>Source\RenderJobs\Passes</Filter>
     </ClCompile>
+    <ClCompile Include="src\BloomPass.cpp">
+      <Filter>Source\RenderJobs\Passes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -678,6 +681,9 @@
       <Filter>Headers\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\DepthOfFieldPass.h">
+      <Filter>Headers\RenderJobs\Passes</Filter>
+    </ClInclude>
+    <ClInclude Include="src\BloomPass.h">
       <Filter>Headers\RenderJobs\Passes</Filter>
     </ClInclude>
   </ItemGroup>
