--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj.filters
@@ -396,6 +396,12 @@
     <ClCompile Include="src\BloomPass.cpp">
       <Filter>Source\RenderJobs\Passes</Filter>
     </ClCompile>
+    <ClCompile Include="src\SSAOPass.cpp">
+      <Filter>Source\RenderJobs\Passes</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RandomGenerator.cpp">
+      <Filter>Source\Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -686,6 +692,12 @@
     <ClInclude Include="src\BloomPass.h">
       <Filter>Headers\RenderJobs\Passes</Filter>
     </ClInclude>
+    <ClInclude Include="src\SSAOPass.h">
+      <Filter>Headers\RenderJobs\Passes</Filter>
+    </ClInclude>
+    <ClInclude Include="src\RandomGenerator.h">
+      <Filter>Headers\Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DX11Renderer.rc">
@@ -831,6 +843,9 @@
       <Filter>Assets\Shaders\PostFX</Filter>
     </FxCompile>
     <FxCompile Include="Assets\Shaders\DepthOfField.hlsl">
+      <Filter>Assets\Shaders\PostFX</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shaders\SSAO.hlsl">
       <Filter>Assets\Shaders\PostFX</Filter>
     </FxCompile>
   </ItemGroup>
