More particle work

--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -435,6 +435,7 @@
     <None Include="Assets\Shaders\Lighting\Diffuse.hlsli" />
     <None Include="Assets\Models\DefaultSphere.asset" />
     <None Include="Assets\Shaders\Lighting\Shadows.hlsli" />
+    <None Include="Assets\Materials\FireParticleMaterial.asset" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BilinearDownsample.hlsl">
