Working over lunch break, added ability to use GLB files to place torches and boats

--- a/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
+++ b/DX11Renderer/DX11Renderer/DX11Renderer.vcxproj
@@ -409,6 +409,7 @@
     <None Include="Assets\Materials\GreyboxMaterial.asset" />
     <None Include="Assets\Materials\HeadMaterial.asset" />
     <None Include="Assets\Materials\LightMaterial.asset" />
+    <None Include="Assets\Models\Boat.asset" />
     <None Include="Assets\Models\CascadeTestScene.asset" />
     <None Include="Assets\Models\Head.asset" />
     <None Include="Assets\Materials\HairMaterial.asset" />
